force-app/main/default/objects/Case/fields/Exemption__c.field-meta.xml
<CustomField>
    <fullName>Exemption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exemption</label>
    <referenceTo>Exemption__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>