force-app/main/default/objects/Case/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1 - Policy related</fullName>
            </value>
            <value>
                <fullName>L2 - Service queries</fullName>
            </value>
            <value>
                <fullName>L3 - Technical issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>