force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for help or support</description>
    <label>Reason for Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have a question about the policy or guidance</fullName>
            </value>
            <value>
                <fullName>I need an account created</fullName>
            </value>
            <value>
                <fullName>I cannot log in to my account</fullName>
            </value>
            <value>
                <fullName>Something has gone wrong with the service</fullName>
            </value>
            <value>
                <fullName>I need to change my permission levels</fullName>
            </value>
            <value>
                <fullName>I have a complaint</fullName>
            </value>
            <value>
                <fullName>I have changed my agent and want to move my exemption</fullName>
            </value>
            <value>
                <fullName>I cannot link my new account to my previously registered exemptions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>