force-app/main/default/objects/Case/recordTypes/PRSE_Help_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>PRSE_Help_Support_Case</fullName>
    <active>true</active>
    <businessProcess>PRSE Help and Support</businessProcess>
    <description>PRSE case to raise help and support requests</description>
    <label>PRSE Help / Support Case</label>
</RecordType>