force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Exemption__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Reason__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.PRSE_Help_Support_Case</value>
    </filters>
    <label>All Cases</label>
</ListView>