force-app/main/default/objects/Case/listViews/L1_Policy_Related.listView-meta.xml
<ListView>
    <fullName>L1_Policy_Related</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Exemption__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Reason__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>L1 - Policy related</value>
    </filters>
    <label>L1 - Policy Related</label>
</ListView>