force-app/main/default/objects/Case/listViews/L2_Service_Queries.listView-meta.xml
<ListView>
    <fullName>L2_Service_Queries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Exemption__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Reason__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>L2 - Service Queries</value>
    </filters>
    <label>L2 - Service queries</label>
</ListView>